--- a/circle.yml
+++ b/circle.yml
@@ -28,3 +28,11 @@ dependencies:
 test:
   override:
     - ./lein spec
+
+deployment:
+  publish:
+    branch: master
+    commands:
+      - ./lein codox
+      - sed -i 's%https://${GH_TOKEN}@${GH_REF}%git@github.com:coldnew/pangu.clj.git%g' deploy.sh
+      - ./deploy.sh
